# hypeGRL

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  requirements.txt
docs/api/: embedders.rst  generation.rst  manifolds.rst  streaming.rst  unknown_edges.rst  visualization.rst
docs/background/: encoder_decoder.rst  hyperbolic_geometry.rst  hyperbolic_graph.rst
docs/methods/: ase.rst  dmercator.rst  lorentz.rst  poincare_embeddings.rst  poincare_maps.rst
docs/tutorials/: graph_generation.ipynb  quickstart.ipynb  streaming.ipynb  unknown_edges.ipynb
hypegrl/: __init__.py
hypegrl/embedders/: __init__.py  ase.py  base.py  dmercator.py  hydra.py  lorentz.py  out_of_sample.py  poincare_embeddings.py  poincare_maps.py
hypegrl/generation/: __init__.py  base.py  fermi_dirac.py  rdpg.py  threshold.py
hypegrl/manifolds/: __init__.py  lorentz.py  poincare.py
hypegrl/streaming/: __init__.py  buffer.py  scheduler.py  woodbury.py
hypegrl/unknown_edges/: __init__.py  imputation.py  joint_optimizer.py
hypegrl/visualization/: __init__.py  disk.py  graph.py  lorentz.py
tests/: test_embedders.py  test_generation.py  test_streaming.py  test_unknown_edges.py
